[package]
name = "git init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "./src/heimdall.rs"

[dependencies]
proxy-wasm = "0"
log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

wasmedge_http_req  = "0"
wasmedge_wasi_socket = "0"

redis = { path = "/Volumes/DATA/VSCodeProjects/redis-rs/redis"}
